# vision_msgs_layers

./: README.md
.github/workflows/: build_and_test_humble.yaml
vision_msgs_layers/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
vision_msgs_layers/include/vision_msgs_layers/: bounding_box_2d.hpp  visibility_control.h
vision_msgs_layers/src/: bounding_box_2d.cpp
